Fix spacing on friends content

--- a/styles.css
+++ b/styles.css
@@ -289,7 +289,7 @@
 .murtsa{
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 7px;
     font-size: 18px;
 }
 
